--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ember-resolver": "^5.0.1",
     "ember-simple-auth": "^1.7.0",
     "ember-source": "~3.5.0",
+    "ember-toggle": "^5.3.2",
     "ember-welcome-page": "^3.2.0",
     "eslint-plugin-ember": "^5.2.0",
     "loader.js": "^4.7.0",
